<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="bananagear_title">Banana Gear</string>
    <string name="banana_about_title">About us</string>
    <string name="banana_about_summary">Why so serious?</string>
    <string name="banana_about_link">Visit and join</string>
    <string name="banana_website_title">Website</string>
    <string name="banana_website_summary">Feel free to visit our website</string>
    <string name="banana_telegram_title" translatable="false">Telegram</string>
    <string name="banana_telegram_summary">Join our community chat</string>
    <string name="banana_github_title" translatable="false">GitHub</string>
    <string name="banana_github_summary">Check out our GitHub</string>
    <string name="banana_about_info_summary">BananaDroid is an ordinary Android Custom ROM and absolutely not better than others. We try to do what we like and may give good experience for users. Please don\'t be hesitate to report any issue on your phone to our telegram group. We can\'t promise to solve your issue but we will try to figure it out.</string>
    <string name="banana_about_team">Contributors</string>
    <string name="banana_maintainer_team">Maintainers</string>
    <string name="banana_about_travarilo" translatable="false">Rizky Benggolo</string>
    <string name="banana_about_travarilo_summary">Lead Developer | Mi 11 Lite maintainer</string>
    <string name="banana_about_genkzsz11" translatable="false">Muhammad Fikri</string>
    <string name="banana_about_genkzsz11_summary">Contributor</string>
    <string name="banana_about_atharv" translatable="false">Atharv Sutar</string>
    <string name="banana_about_atharv_summary">Contributor</string>
    <string name="banana_about_AbrarNoob" translatable="false">AbrarNoob</string>
    <string name="banana_about_AbrarNoob_summary" translatable="false">POCO F3 / alioth</string>
    <string name="banana_about_Andreock" translatable="false">Andreock</string>
    <string name="banana_about_Andreock_summary" translatable="false">Realme GT Neo 2 / bitra</string>
    <string name="banana_about_aepranata" translatable="false">Aditya Eka Pranata</string>
    <string name="banana_about_aepranata_summary" translatable="false">Redmi 5 / rosy</string>
    <string name="banana_about_AradheaRizky" translatable="false">Aradhea Rizky</string>
    <string name="banana_about_AradheaRizky_summary" translatable="false">Redmi K20 Pro | Mi 9T Pro / raphael</string>
    <string name="banana_about_Bratasij" translatable="false">Bratasij</string>
    <string name="banana_about_Bratasij_summary" translatable="false">Redmi Note 11 / spes</string>
    <string name="banana_about_ChiHuan" translatable="false">Chi Huan</string>
    <string name="banana_about_ChiHuan_summary" translatable="false">Redmi 8|8A|8A Dual / olives</string>
    <string name="banana_about_Curse" translatable="false">Curse</string>
    <string name="banana_about_Curse_summary" translatable="false">Redmi Note 9 Pro Global / joyeuse</string>
    <string name="banana_about_Djampt" translatable="false">Djampt</string>
    <string name="banana_about_Djampt_summary" translatable="false">Redmi Note 10 Pro / sweet</string>
    <string name="banana_about_elizabethangelalorenza" translatable="false">elizabethangelalorenza</string>
    <string name="banana_about_elizabethangelalorenza_summary" translatable="false">POCO X3 Pro / vayu</string>
    <string name="banana_about_FPSensor" translatable="false">FPSensor</string>
    <string name="banana_about_FPSensor_summary" translatable="false">Redmi Note 7 / lavender</string>
    <string name="banana_about_FrEeRuNnEr4EvEr" translatable="false">FrEeRuNnEr4EvEr</string>
    <string name="banana_about_FrEeRuNnEr4EvEr_summary" translatable="false">Samsung S10 | Samsung Note 10</string>
    <string name="banana_about_HonokaKousaka" translatable="false">HonokaKousaka</string>
    <string name="banana_about_HonokaKousaka_summary" translatable="false">Mi A1 / tissot</string>
    <string name="banana_about_MOCHA" translatable="false">MOCHA</string>
    <string name="banana_about_MOCHA_summary" translatable="false">Redmi Note 6 Pro / tulip</string>
    <string name="banana_about_Mudit" translatable="false">Mudit</string>
    <string name="banana_about_Mudit_summary" translatable="false">Poco F4 / munch</string>
    <string name="banana_about_Mrick343" translatable="false">Mrick343</string>
    <string name="banana_about_Mrick343_summary" translatable="false">OnePlus 9RT / martini</string>
    <string name="banana_about_MweTwo" translatable="false">MweTwo</string>
    <string name="banana_about_MweTwo_summary" translatable="false">POCO X3 NFC / surya</string>
    <string name="banana_about_kibria5" translatable="false">kibria5</string>
    <string name="banana_about_kibria5_summary" translatable="false">Redmi Note 7 Pro / violet</string>
    <string name="banana_about_Perses" translatable="false">Perses</string>
    <string name="banana_about_Perses_summary" translatable="false">Realme X3 / x3</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="notif_title">Notifications</string>
    <string name="buttons_title">Buttons &amp; Navigations</string>
    <string name="notification_category_title">Notifications</string>
    <string name="unit_seconds">seconds</string>
    <string name="lockscreen_media_art_options_title">Lock screen media art</string>
    <string name="lockscreen_media_art_title">Media cover art</string>
    <string name="lockscreen_media_art_summary">Display media cover art when available</string>
    <string name="lockscreen_albumart_filter_title">Media cover art filter</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">End the current call by pressing the power button</string>
    <string name="button_wake_title">Wake device</string>
    <string name="home_answer_call_title">Answer call</string>
    <string name="home_answer_call_summary">Answer incoming calls by pressing the home button</string>
    <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="disable_navkeys_title">Enable on-screen nav bar</string>
    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="qs_tile_animation_title">Tiles animation</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Animation interpolator</string>
    <string name="qs_tiles_layout_category">Tiles layout</string>
    <string name="qs_rows_portrait_title">Rows (Portrait)</string>
    <string name="qqs_rows_portrait_title">Rows (Quick QS portrait)</string>
    <string name="qs_columns_portrait_title">Columns (Portrait)</string>
    <string name="qs_tile_hide_label_title">Hide labels</string>
    <string name="qs_tile_hide_label_summary">Show only icon for QS tiles</string>
    <string name="qs_tile_vertical_layout_title">Vertical layout</string>
    <string name="qs_tile_vertical_layout_summary">Enable vertical layout for QS tiles</string>
    <string name="pixel_navbar_anim_title">Pixel animation</string>
    <string name="pixel_navbar_anim_summary">Enable pixel style animation for 3-button navigation bar</string>
    <string name="notification_guts_kill_app_button_title">Force stop button</string>
    <string name="notification_guts_kill_app_button_summary">Show force stop button in the notification\'s longpress menu</string>
    <string name="notification_heads_up_title">Heads up</string>
    <string name="notification_heads_up_summary">Allow pop up notifications</string>
    <string name="notification_heads_up_timeout_title">Time out</string>
    <string name="notification_heads_up_timeout_summary">Time to display heads up notifications</string>
    <string name="less_boring_heads_up_title">Less boring</string>
    <string name="less_boring_heads_up_summary">Display popup notifications only for alarm, dialer and messaging app</string>
    <string name="notification_sound_vib_screen_on_title">Noisy notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="reticker_title">reTicker</string>
    <string name="reticker_summary">Replace heads-up notification with slim and less invasive version of redesigned ticker</string>
    <string name="reticker_colored_title">Use app colored background</string>
    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
    <string name="notification_material_dismiss_title">Clear all notification button</string>
    <string name="notification_material_dismiss_summary">Replace clear all notification text with material style floating button</string>
    <string name="navbar_layout_title">Layout</string>
    <string name="navbar_invert_layout_title">Invert layout</string>
    <string name="navbar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="lockscreen_enable_power_menu_title">Power menu</string>
    <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure lockscreen</string>
    <string name="alert_slider_cat_title">Alert slider</string>
    <string name="alert_slider_notifications_title">Alert slider notifications</string>
    <string name="alert_slider_notifications_summary">Display notification when changing alert slider position</string>
    <string name="media_artwork_title">Media artwork</string>
    <string name="artwork_media_background_enable_blur_title">Blur media notification artwork background</string>
    <string name="artwork_media_background_blur_radius_title">Blur amount for media notification artwork</string>
    <string name="media_artwork_fade_percent_title">Fade amount for media notification artwork</string>
</resources>