<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2023 BananaDroid
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notif_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/notification_category_title" >

        <!-- Notification guts kill app button -->
        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="notification_guts_kill_app_button"
            android:title="@string/notification_guts_kill_app_button_title"
            android:summary="@string/notification_guts_kill_app_button_summary" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="notification_sound_vib_screen_on"
            android:title="@string/notification_sound_vib_screen_on_title"
            android:summary="@string/notification_sound_vib_screen_on_summary"
            android:defaultValue="true" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="notification_material_dismiss"
            android:title="@string/notification_material_dismiss_title"
            android:summary="@string/notification_material_dismiss_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.GlobalSettingSwitchPreference
            android:key="heads_up_notifications_enabled"
            android:title="@string/notification_heads_up_title"
            android:summary="@string/notification_heads_up_summary"
            android:defaultValue="true" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="less_boring_heads_up"
            android:title="@string/less_boring_heads_up_title"
            android:summary="@string/less_boring_heads_up_summary"
            android:defaultValue="false"
            android:dependency="heads_up_notifications_enabled" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="heads_up_timeout"
            android:title="@string/notification_heads_up_timeout_title"
            android:summary="@string/notification_heads_up_timeout_summary"
            settings:units="@string/unit_seconds"
            android:defaultValue="5"
            settings:min="1"
            android:max="10"
            android:dependency="heads_up_notifications_enabled" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="reticker_status"
            android:title="@string/reticker_title"
            android:summary="@string/reticker_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="reticker_colored"
            android:title="@string/reticker_colored_title"
            android:summary="@string/reticker_colored_summary"
            android:dependency="reticker_status"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/media_artwork_title" >

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="media_artwork_blur_enabled"
            android:title="@string/artwork_media_background_enable_blur_title"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="media_artwork_blur_radius"
            android:title="@string/artwork_media_background_blur_radius_title"
            android:dependency="media_artwork_blur_enabled"
            android:defaultValue="1"
            android:max="125"
            settings:min="5" />

        <com.banana.support.preferences.SystemSettingSeekBarPreference
            android:key="media_artwork_fade_percent"
            android:title="@string/media_artwork_fade_percent_title"
            android:dependency="media_artwork_blur_enabled"
            android:defaultValue="30"
            android:max="80"
            settings:min="1" />

    </PreferenceCategory>
</PreferenceScreen>
