<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2023 BananaDroid
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/buttons_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="navbar_key"
        android:title="@string/navigation_bar_title">

        <SwitchPreference
            android:key="disable_nav_keys"
            android:title="@string/disable_navkeys_title"
            android:summary="@string/disable_navkeys_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SecureSettingListPreference
            android:key="navbar_layout_views"
            android:title="@string/navbar_layout_title"
            android:summary="%s"
            android:entries="@array/navbar_layout_entries"
            android:entryValues="@array/navbar_layout_values"
            android:defaultValue="default" />

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="navbar_inverse_layout"
            android:title="@string/navbar_invert_layout_title"
            android:summary="@string/navbar_invert_layout_summary"
            android:defaultValue="false" />

        <!-- Pixel Nav Animation -->
        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="pixel_nav_animation"
            android:title="@string/pixel_navbar_anim_title"
            android:summary="@string/pixel_navbar_anim_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="navigation_bar_edge_long_swipe"
            android:dialogTitle="@string/navigation_bar_edge_long_swipe_title"
            android:title="@string/navigation_bar_edge_long_swipe_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="power_key"
        android:title="@string/hardware_keys_power_key_title" >

        <Preference
           android:key="power_menu"
           android:title="@string/power_menu_title"
           android:summary="@string/power_menu_title_summary"
           android:fragment="com.banana.settings.fragments.PowerMenuSettings" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_enable_power_menu"
            android:title="@string/lockscreen_enable_power_menu_title"
            android:summary="@string/lockscreen_enable_power_menu_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="power_end_call"
            android:title="@string/power_end_call_title"
            android:summary="@string/power_end_call_summary"
            android:persistent="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="volume_keys"
        android:title="@string/hardware_keys_volume_keys_title">

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="volume_key_cursor_control"
            android:summary="%s"
            android:title="@string/volume_key_cursor_control_title"
            android:dialogTitle="@string/volume_key_cursor_control_title"
            android:entries="@array/volume_key_cursor_control_entries"
            android:entryValues="@array/volume_key_cursor_control_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="swap_capacitive_keys_cat"
        android:title="@string/swap_capacitive_keys_title">

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="swap_capacitive_keys"
            android:title="@string/swap_capacitive_keys_title"
            android:summary="@string/swap_capacitive_keys_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="button_backlight_cat"
        android:title="@string/button_backlight_title">

        <com.evolution.settings.buttons.preference.ButtonBacklightBrightness
            android:key="button_backlight"
            android:title="@string/button_backlight_title"
            android:dialogTitle="@string/button_backlight_title"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="home_key"
        android:title="@string/hardware_keys_home_key_title">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="home_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="home_answer_call"
            android:title="@string/home_answer_call_title"
            android:summary="@string/home_answer_call_summary"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_home_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_home_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="back_key"
        android:title="@string/hardware_keys_back_key_title">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="back_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="hardware_keys_back_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="menu_key"
        android:title="@string/hardware_keys_menu_key_title">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="menu_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="hardware_keys_menu_press"
            android:dialogTitle="@string/hardware_keys_short_press_title"
            android:title="@string/hardware_keys_short_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_menu_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="assist_key"
        android:title="@string/hardware_keys_assist_key_title">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="assist_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="hardware_keys_assist_press"
            android:dialogTitle="@string/hardware_keys_short_press_title"
            android:title="@string/hardware_keys_short_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_assist_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_switch_key"
        android:title="@string/hardware_keys_appswitch_key_title" >

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="app_switch_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="hardware_keys_app_switch_press"
            android:dialogTitle="@string/hardware_keys_short_press_title"
            android:title="@string/hardware_keys_short_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_app_switch_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="camera_key"
        android:title="@string/hardware_keys_camera_key_title">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="camera_wake_screen"
            android:title="@string/button_wake_title"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="camera_sleep_on_release"
            android:title="@string/camera_sleep_on_release_title"
            android:summary="@string/camera_sleep_on_release_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="camera_launch"
            android:title="@string/camera_launch_title"
            android:summary="@string/camera_launch_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="alert_slider_cat"
        android:title="@string/alert_slider_cat_title">

        <com.banana.support.preferences.SystemSettingSwitchPreference
            android:key="alert_slider_notifications"
            android:title="@string/alert_slider_notifications_title"
            android:summary="@string/alert_slider_notifications_summary"
            android:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>
