<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2023 BananaDroid
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.banana.support.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

    <PreferenceCategory
        android:key="lockscreen_media_art_options"
        android:title="@string/lockscreen_media_art_options_title">

        <com.banana.support.preferences.SecureSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/lockscreen_media_art_title"
            android:summary="@string/lockscreen_media_art_summary"
            android:defaultValue="false" />

        <com.banana.support.preferences.SystemSettingListPreference
            android:key="lockscreen_albumart_filter"
            android:title="@string/lockscreen_albumart_filter_title"
            android:entries="@array/lockscreen_albumart_filter_entries"
            android:entryValues="@array/lockscreen_albumart_filter_values"
            android:dependency="lockscreen_media_metadata"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>
